[tool.poetry]
name = "perf-demos"
version = "0.1.0"
description = ""
authors = ["Willie Wheeler <willie.wheeler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.1.0"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
